Bug 126244 - EDITING Category labels of bar chart are rotated vertically
Summary: EDITING Category labels of bar chart are rotated vertically
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-07-05 11:26 UTC by NISZ LibreOffice Team
Modified: 2019-08-02 12:33 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (24.04 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-07-05 11:27 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (139.90 KB, image/png)
2019-07-05 11:27 UTC, NISZ LibreOffice Team
Details
Example file from Calc with the same data and chart type (22.06 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-07-05 11:27 UTC, NISZ LibreOffice Team
Details
Screenshof of the Calc example file (76.47 KB, image/png)
2019-07-05 11:28 UTC, NISZ LibreOffice Team
Details
Fixed chart layout (19.19 KB, image/png)
2019-08-01 08:49 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-07-05 11:26:31 UTC
Description:
When a bar chart with multiple categories is created – or imported from an Excel file – all category labels are rotated vertically. This is an interoperability issue too, beside that it makes category labels hard to read in the first place.
In Excel the innermost label is rotated horizontally while outer labels are vertical. 


Steps to Reproduce:
1.	Insert a bar chart in Excel with two category columns
2.	Save the file and open it in Calc


Actual Results:
Unlike in Excel both categories appear vertically aligned.

Expected Results:
The first category should appear vertically aligned, the second horizontally.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: d35171456bc230efdaa9426da1398b2db7fa0df8
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-27_04:11:18
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-07-05 11:27:04 UTC
Created attachment 152581 [details]
Example file from Excel
Comment 2 NISZ LibreOffice Team 2019-07-05 11:27:20 UTC
Created attachment 152582 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 3 NISZ LibreOffice Team 2019-07-05 11:27:42 UTC
Created attachment 152583 [details]
Example file from Calc with the same data and chart type
Comment 4 NISZ LibreOffice Team 2019-07-05 11:28:00 UTC
Created attachment 152584 [details]
Screenshof of the Calc example file
Comment 5 Jacques Guilleron 2019-07-07 15:38:32 UTC
Hi NISZ LibreOffice Team,

I reproduce with
LO  6.4.0.0.alpha0+ (x86) Build ID: 719f4a93e46a6b397356dbb605d2867639ca3942
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: fr-FR (fr_FR); UI-Language: en-US Calc: CL
and
LO 5.3.7.1 Build ID: 376eaac300a303c4ad2193fb7f6a7522caf550b9
Threads CPU : 2; Version de l'OS :Windows 6.1; UI Render : par défaut; Moteur de mise en page : nouveau; Locale : fr-FR (fr_FR); Calc: CL

Jacques
Comment 6 Xisco Faulí 2019-07-09 15:12:29 UTC
Regression introduced by:

author	Balazs Varga <balazs.varga991@gmail.com>	2019-05-17 11:40:27 +0200
committer	László Németh <nemeth@numbertext.org>	2019-05-18 00:06:28 +0200
commit 75ef0e41ea8a9096ac619356d2b837c5333b47e6 (patch)
tree 3d5b27ef9aa05a39b4098d4bfe092ecbb26d6bf1
parent 9976aa7b8420daa9f7a5290ae433e2ab338ca146 (diff)
tdf#125334 Chart: allow text break in bar chart axis labels

Bisected with: bibisect-linux64-6.3

Adding Cc: to Balazs Varga
Comment 7 Gabor Kelemen (Collabora) 2019-07-10 11:40:39 UTC
(In reply to Xisco Faulí from comment #6)
> Regression introduced by:
> 
> author	Balazs Varga <balazs.varga991@gmail.com>	2019-05-17 11:40:27 +0200
> committer	László Németh <nemeth@numbertext.org>	2019-05-18 00:06:28 +0200
> commit 75ef0e41ea8a9096ac619356d2b837c5333b47e6 (patch)
> tree 3d5b27ef9aa05a39b4098d4bfe092ecbb26d6bf1
> parent 9976aa7b8420daa9f7a5290ae433e2ab338ca146 (diff)
> tdf#125334 Chart: allow text break in bar chart axis labels
> 
> Bisected with: bibisect-linux64-6.3
> 
> Adding Cc: to Balazs Varga

It depends. Before this in 6.2 both categories appeared horizontally oriented, so the outer category was "bad" and the inner "good". Now it's the opposite: the years appear correctly oriented and the inner categories are vertically oriented.

This part certainly needs a bit of tweaking.
Comment 8 Xisco Faulí 2019-07-10 11:44:36 UTC
oh right, let's remove the 'regression' keyword then... I hope the bisection helps at least ;-)
Comment 9 Balázs Varga 2019-07-10 12:31:48 UTC
(In reply to Xisco Faulí from comment #8)
> oh right, let's remove the 'regression' keyword then... I hope the bisection
> helps at least ;-)

Thank you very much Xisco, yes it helped. :) I will take a look at this BUG later, and try to solved this issue. :)
Comment 10 Commit Notification 2019-08-01 08:49:02 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0dab9b7c83099a192ec61486e7a9fd04aecd3686%5E%21

tdf#126244 Chart view: fix rotation of complex category labels

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 László Németh 2019-08-01 08:49:10 UTC
Created attachment 153085 [details]
Fixed chart layout
Comment 12 Xisco Faulí 2019-08-02 12:33:03 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 620fff54ca9cd04459cc5d963ef94d4438129fe4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!

I think it's good to have it in 6-3 as well -> https://gerrit.libreoffice.org/#/c/76865/