tdf#126244 Chart view: fix rotation of complex category labels

The first level of vertical category axis labels orientation
should be horizontal, other levels should be rotated to 90°.
Also do not allow text break for complex vertical category axis
labels.

Change-Id: I01a6d9f753e767927fa71e2967dc3e6bad270565